-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.3.0-beta1
-
macOS 10.12
Steps to reproduce:
- create/open a Qt Quick Application
- right click on the qrc file node and trigger 'Add New...'
- choose 'Qt' -> 'QML File...', give it a name and process
Current result:
- file is created [verified on cmdline]
- file does not appear inside the navigation tree
- open the qrc inside 'Resource Editor' or 'Plain Text Editor'
- newly added file does not appear here as well
Note: Adding this file afterwards via 'Add Existing Files...' does update the qrc file - but does not update the navigation tree.
- duplicates
-
QTCREATORBUG-17994 Add to project
-
- Closed
-
- is duplicated by
-
QTCREATORBUG-17963 Adding new (QML) files to a .qrc does not work
-
- Closed
-
- relates to
-
QTCREATORBUG-18180 [REG 4.2 -> 4.3] Projects view does not update when adding file to qrc-file
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-17930 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
194783,2 | Resources: Read qrc file contents from file if that is readable | 4.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
194784,2 | Resources: Trigger watcher when changing qrc file | 4.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |